fix: resolve css alignment

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -48,8 +48,9 @@
 }
 
 #post-contents {
-	max-width: 60rem;
-	margin-inline: 8rem;
+	max-width: 76rem;
+	margin-inline: auto;
+	padding-inline: 8rem;
 	margin-block-end: 2rem;
 	overflow-x: hidden;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
